Refactor tests and cleanup: replace `Arrays.asList` with `List.of`, update pattern matching syntax for clarity, and optimize query builder strings.